# azawalletekioba

./: .env.example  .gitignore  AZURE_LIVE_CONNECTION_READY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.universal  Procfile  README.md  WALLET_DASHBOARD_INTEGRATION.md  aca-show-2.err  aca-show.json  api.js  api.py  app.yaml  az_out.txt  azure-pipelines.yml  build-and-push.ps1  cloudbuild.ai-assistant.yaml  cloudbuild.universal.yaml  deploy-local.ps1  deploy_ekioba.ps1  deploy_frontend.ps1  do-app-spec.yaml  docker-compose.yml  fix_test.py  main.go  migrate_node_to_python.ps1  nginx.conf  output.txt  package-lock.json  package.json  prepare_azure_live_connection.ps1  push-to-dockerhub.ps1  requirements-lock.txt  requirements.txt  route.py  skills-lock.json  supervisord.conf  verify_azure_secrets.ps1  verify_secrets.ps1  (+1 more)
frontend/: .dockerignore  Dockerfile  agent.py  app.py  next-env.d.py  next.config.js  next.config.py  package-lock.json  package.json  postcss.config.py  pyproject.toml  requirements.txt  tailwind.config.py
frontend/.next/: trace  trace-build
frontend/app/: globals.css  layout.py  layout.tsx  page.py  page.tsx
frontend/components/: HeaderFooterGenerator.py  HeaderFooterGenerator.tsx  WalletView.py  WalletView.tsx
frontend/public/: tonconnect-manifest.json
frontend/scripts/: generate-icons.py  setup-ton-webhook.py
frontend/services/: idiaTokenService.py  idiaTokenService.ts  route.py  solana.py  solana.ts
frontend/static/: app.js  app.py  style.css
frontend/templates/: base.html  dashboard.html  index.html  wallet_dashboard.html
k8s/: hpa.yaml  (+12 more)
(+135 files in other folders)
