[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ekioba-frontend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "aiofiles==24.1.0",
    "python-multipart==0.0.20",
    "yfinance==0.2.54",
]

[tool.setuptools.packages.find]
where = ["."]

